--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,6 +1,5 @@
-name: PING
+name: pings
 hosts: web  
 tasks: # List of tasks to be executed
   - name: Pinging the server
     ansible.builtin.ping:
-    
