--- a/playbook-02.yaml
+++ b/playbook-02.yaml
@@ -7,6 +7,10 @@
         name: nginx
         state: present
     - name: start nginx
-      ansible.builtin.systemd:
+      ansible.builtin.service:
         name: nginx
         state: started
+    - name: stop nginx
+      ansible.builtin.service:
+        name: nginx
+        state: stopped
