--- a/playbook-02.yaml
+++ b/playbook-02.yaml
@@ -14,3 +14,11 @@
       ansible.builtin.service:
         name: nginx
         state: stopped
+    - name: restart nginx
+      ansible.builtin.service:
+        name: nginx
+        state: restarted
+    - name: enable nginx
+      ansible.builtin.service:
+        name: nginx
+        enabled: yes
