--- a/playbook-vars.yaml
+++ b/playbook-vars.yaml
@@ -3,8 +3,8 @@
   become: yes
   vars:
     myvar: "Hello World"
-    name : "Chintu"
+    nam : "Chintu"
   tasks:
     - name : print variable
       ansible.builtin.debug:
-        msg: " Printing Statement for {{ name }}: {{ myvar }}"
+        msg: " Printing Statement for {{ nam }}: {{ myvar }}"
