--- a/playbook-vars-file.yaml
+++ b/playbook-vars-file.yaml
@@ -7,7 +7,10 @@
   vars_prompt:
     - name: yourname
       prompt: "Enter the yourname"
-      private: yes  
+      private: yes 
+    - name: val
+      prompt: "Enter the value"
+      private: no 
   tasks:
     - name: print variable
       ansible.builtin.debug:
