--- a/inventory.ini
+++ b/inventory.ini
@@ -9,6 +9,11 @@ frontend
 
 [web]
 3.88.91.66
+ansible_user=ec2-user
+ansible_password=DevOps321  # Password for the user
+
+[web:vars]
+val = "2502525"
 
 [local]
 localhost
