--- a/inventory.ini
+++ b/inventory.ini
@@ -8,9 +8,7 @@ backend
 frontend
 
 [web]
-3.88.91.66
-ansible_user=ec2-user
-ansible_password=DevOps321  # Password for the user
+3.88.91.66 ansible_user=ec2-user ansible_password=DevOps321  # Password for the user
 
 [web:vars]
 val = "2502525"
