--- a/inventory.ini
+++ b/inventory.ini
@@ -11,7 +11,7 @@ frontend
 3.88.91.66 ansible_user="ec2-user" ansible_password="DevOps321"  # Password for the user
 
 [web:vars]
-val = "2502525"
+vals = "2502525"
 
 [local]
 localhost
