--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,6 @@
-[backend]
-3.88.91.66
 [frontend]
-3.88.91.66
+frontend.learningdevsecops.store ansible_user="ec2-user" ansible_password="DevOps321"
+
 
 [expense:children]
 backend
@@ -18,3 +17,7 @@ localhost
 
 [local:vars]
 val = "2502525"
+
+[mysql]
+mysql.learningdevsecops.store ansible_user="ec2-user" ansible_password="DevOps321"
+
