--- a/inventory.ini
+++ b/inventory.ini
@@ -1,13 +1,12 @@
 [frontend]
-frontend.learningdevsecops.store ansible_user="ec2-user" ansible_password="DevOps321"
-
+frontend.learningdevsecops.store 
 
 [expense:children]
 backend
 frontend
 
 [web]
-3.88.91.66 ansible_user="ec2-user" ansible_password="DevOps321"  # Password for the user
+3.88.91.66 
 
 [web:vars]
 vals = "2502525"
@@ -19,5 +18,9 @@ localhost
 val = "2502525"
 
 [mysql]
-mysql.learningdevsecops.store ansible_user="ec2-user" ansible_password="DevOps321"
+mysql.learningdevsecops.store
 
+[all:vars]
+
+ansible_user=ubuntuec2-user
+ansible_password=DevOps321
