--- a/inventory.ini
+++ b/inventory.ini
@@ -22,5 +22,5 @@ val = "2502525"
 mysql.learningdevsecops.store
 
 [all:vars]
-ansible_user=ubuntuec2-user
+ansible_user=ec2-user
 ansible_password=DevOps321
