--- a/inventory.ini
+++ b/inventory.ini
@@ -1,10 +1,15 @@
 
 
 [expense:children]
+frontend
+backend
+web
 
 [frontend]
 frontend.learningdevsecops.store 
 
+[backend]
+backend.learningdevsecops.store
 
 [web]
 3.88.91.66 
