--- a/backend.yaml
+++ b/backend.yaml
@@ -25,4 +25,13 @@
       path: /app
       state: directory
   
- 
+ - name: download expense app
+    ansible.builtin.get_url:
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+      dest: /tmp/backend.zip
+
+ - name: unzip the file
+    ansible.builtin.unarchive:
+      src: /tmp/backend.zip
+      dest: /app
+      remote_src: yes     
