--- a/backend.yaml
+++ b/backend.yaml
@@ -34,4 +34,8 @@
     ansible.builtin.unarchive:
       src: /tmp/backend.zip
       dest: /app
-      remote_src: yes     
+      remote_src: yes  
+
+  - name: install dependencies
+    community.general.npm:
+    path: /app
