--- a/backend.yaml
+++ b/backend.yaml
@@ -25,32 +25,46 @@
       path: /app
       state: directory
   
-  - name: download expense app
+  - name: download backend code
     ansible.builtin.get_url:
       url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
       dest: /tmp/backend.zip
 
-  - name: unzip the file
+  - name: unzip backend code
     ansible.builtin.unarchive:
       src: /tmp/backend.zip
       dest: /app
-      remote_src: yes  
-
-  - name: install dependencies
+      remote_src: yes
+  
+  - name: Install dependencies
     community.general.npm:
-    path: /app
+      path: /app
 
-  - name: copy backend service file
+  - name: copy backend service
     ansible.builtin.copy:
       src: backend.service
       dest: /etc/systemd/system/backend.service
-  
+
+  - name: install python libs
+    ansible.builtin.pip:
+      name: "{{ item }}"
+      executable: pip3.9
+    loop:
+    - cryptography
+    - PyMySQL
+
   - name: import mysql data
     community.mysql.mysql_db:
-      name: expense
       state: import
+      name: all
       login_user: root
       login_password: ExpenseApp@1
       login_host: mysql.learningdevsecops.store
-      target: /app/schema/expense.sql
-  
+      target: /app/schema/backend.sql
+
+  - name: daemon reload and restart service
+    ansible.builtin.systemd_service:
+      enabled: true
+      state: restarted
+      daemon_reload: true
+      name: backend
