--- a/frontend.yaml
+++ b/frontend.yaml
@@ -7,4 +7,8 @@
         name: nginx
         state: installed
     
-    
+    - name: start nginx
+      ansible.builtin.service:
+        name: nginx
+        state: started
+        enabled: yes
