--- a/frontend.yaml
+++ b/frontend.yaml
@@ -12,3 +12,36 @@
         name: nginx
         state: started
         enabled: yes
+
+    - name: remove directory
+      ansible.builtin.file:
+        state: absent
+        path : /usr/share/nginx/html
+
+    - name: create directory
+      ansible.builtin.file:
+        state: directory
+        path: /usr/share/nginx/html
+
+    - name: download frontend code
+      ansible.builtin.get_url:
+        url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+        dest: /tmp/frontend.zip
+    
+    - name: unzip frontend code
+      ansible.builtin.unarchive:
+        src: /tmp/frontend.zip
+        dest: /usr/share/nginx/html
+        remote_src: yes
+
+    - name : copy expense.conf
+      ansible.builtin.copy:
+        src: expense.conf
+        dest: /etc/nginx/conf.d/expense.conf
+
+    
+    - name: restart nginx
+      ansible.builtin.service:
+        name: nginx
+        state: restarted
+        enabled: yes
