--- a/demo.aws_ec2.yaml
+++ b/demo.aws_ec2.yaml
@@ -3,7 +3,7 @@ plugin: amazon.aws.aws_ec2
 # It demonstrates how to use the plugin to create an EC2 instance
 # in AWS and then terminate it
 regions:
-  - us-east-1b
+  - us-east-1
 filters:
   tag:Name: nginx
   instance-state-name: running
