--- a/nginx.yaml
+++ b/nginx.yaml
@@ -5,8 +5,5 @@
     - name: Install nginx
       ansible.builtin.package:
         name: nginx
-        state: present
-    - name: Start nginx
-      ansible.builtin.service:
-        name: nginx
-        state: started
+        state: absent
+
